--- a/admin.css
+++ b/admin.css
@@ -144,6 +144,7 @@ ul ul a {
     #sidebarCollapse span {
         display: none;
     }
+    
 }
 
 
@@ -172,19 +173,72 @@ img {
 
 /*analytics section*/
 .analytics{
-    width: 90%;
-    height: 120%;
+    width: 100%;
+    height: 30%;
 }
-.analysis-progrebar-content-1{
+.content-analysis-1{
     width: 30%;
+    height: 80%;
+    margin: 4% 4%;
+    border-radius: 10%;
+    background-color: #ffffff;
+    opacity: 0.7;
+}
+.content-analysis-1 h3{
+    font-family: "Open Sans";
+    color: #1f447e;
+    position:relative;
+    top:62;
+    left:35%;
+}
+.progress-bar{
+     width: 80%;
+    height: 5%;
+    border-radius: 10%;
+    position:relative;
+    margin:10%;
+    top: 55%;
+}
+.counter{
+    color: #000000;
+    font-family: "Open Sans";
+   position: absolute;
+   top:32%;
+    margin:3% 20% 5% 8.5%;
+    font-size: 170%;
     
-    color: #006DF0;
-
 }
 
-.analysis-progrebar-content-2{
+/*progress bar 2*/
+.content-analysis-2{
     width: 30%;
-    color: #006DF0;
-    left: 50%;
-
+    height: 80%;
+    margin: 4% 4% ;
+    border-radius: 10%;
+    background-color: #ffffff;
+    opacity: 0.7;
+}
+.content-analysis-2 h3{
+    font-family: "Open Sans";
+    color: #1f447e;
+    position:relative;
+    top:62;
+    left:35%;
+}
+.progress-bar-2{
+     width: 80%;
+    height: 5%;
+    border-radius: 10%;
+    position:relative;
+    margin:10%;
+    top: 55%;
+}
+.counter-2{
+    color: #000000;
+    font-family: "Open Sans";
+   position: absolute;
+   top:62%;
+    margin:3% 20% 5% 8.5%;
+    font-size: 170%;
+    
 }
